# striff-gnn

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: repos.yaml  training.yaml
docs/: architecture.md  data-format.md
scripts/: build_corpus.py  build_dataset.py  compute_embeddings.py  export.py  export_text_encoder_onnx.py  renormalize.py  smoke_test.py  train.py
src/corpus/: cloner.py  normalizer.py  parser_client.py  source_parser.py
src/export/: manual_hgt.py  metadata.py  to_onnx.py  validate.py
src/graph/: dataset.py  features.py  sampler.py
src/model/: decoder.py  encoder.py  graph_mae.py
src/tools/: inspect_graph.py  score_pr.py
src/train/: eval.py  losses.py  train.py
